--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "data-support",
   "version": "0.0.0",
-  "main": "./build/dist/data-support.iife.js",
-  "module": "./build/dist/data-support.iife.js",
+  "main": "./dist/data-support.umd.cjs",
+  "module": "./dist/data-support.js",
+  "exports": {
+    ".": {
+      "import": "./dist/data-support.js",
+      "require": "./dist/data-support.umd.cjs"
+    }
+  },
   "scripts": {
     "build": "rimraf build/ && vite build && copyfiles ./package.json build"
   },
-  "author": "",
+  "author": "Eduard Kangash",
   "type": "module",
-  "license": "Internet Systems Consortium (ISC)",
+  "license": "ISC",
   "description": "",
   "devDependencies": {
     "vite": "^6.0.1",
